name: clothsim
version: 0.0.1
cabal-version: >=1.6
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: daniel.trstenjak@gmail.com
synopsis: Some kind of bogus cloth simulation.
description:
    Some kind of bogus cloth simulation.
category: Utils
author: Daniel Trstenjak
 
source-repository head
    type: git
    location: https://github.com/dan-t/clothsim
 
executable clothsim
    build-depends:
        base >=3 && <5,
        vector >=0.10.9.1 && <0.11,
        GLFW-b >=0.1.0.5 && <0.2,
        OpenGLRaw >=1.4.0.0 && <1.5,
        Gamgine ==0.2.*
    main-is: Main.hs
    buildable: True
    ghc-options: -funbox-strict-fields
 
 